<resources>
    <string name="app_name">FoodShop.in</string>
    <string name="network_error_alert_message">Please check your internet connection and try again.</string>
    <string name="please_wait">please wait</string>
    <string name="signing_in">signing in..</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Cancel</string>
    <string name="signout_confirmation_alert_message">Are you sure you want to signout?</string>
    <string name="no_contents_do_display">No contents to display.</string>
    <string name="action_settings">Settings</string>
    <string name="place_order">Place Order</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="sub_total">Sub Total</string>
    <string name="order_success_msg">Order has been placed successfully</string>
    <string name="fetching_near_by_hotels">Fetching near by hotels...</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="show_food_menu">Show Food Menu</string>
    >>>>>>> - food list activity updated
</resources>
